db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: Y
        - name: SA_PASSWORD
          value: Pass@word1
        image: mcr.microsoft.com/mssql/server:2017-latest
        imagePullPolicy: ""
        name: db
        ports:
        - containerPort: 1433
        resources: {}
        volumeMounts:
        - mountPath: /var/opt/mssql/data
          name: mssql-server-linux-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mssql-server-linux-data
        persistentVolumeClaim:
          claimName: mssql-server-linux-data
status: {}
