mvccoredocker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mvccoredocker
  name: mvccoredocker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mvccoredocker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: mvccoredocker
    spec:
      containers:
      - image: mvccoredocker
        imagePullPolicy: ""
        name: mvccoredocker
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
