d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mvccoredocker
  name: mvccoredocker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mvccoredocker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: mvccoredocker
    spec:
      containers:
      - image: boblewisc/mvccoredocker
        imagePullPolicy: ""
        name: mvccoredocker
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: Y
        - name: SA_PASSWORD
          value: Pass@word1
        image: mcr.microsoft.com/mssql/server:2017-latest
        imagePullPolicy: ""
        name: db
        ports:
        - containerPort: 1433
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
  - name: "1433"
    port: 1433
    targetPort: 1433
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
