db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
  - name: "1433"
    port: 1433
    targetPort: 1433
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
