external.yaml
kind: Service
apiVersion: v1
metadata:
  name: davelapsqlserver
spec:
  type: ClusterIP
  ports:
  - port: 1433
    targetPort: 1433
    
---

kind: Endpoints
apiVersion: v1
metadata:
  name: davelapsqlserver
subsets:
  - addresses:
      - ip: 192.168.1.153
    ports:
      - port: 1433
