headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-service
spec:
  clusterIP: None # <--
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
