ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
     
spec:
  rules:
  - host: testme
  - http:
      paths:
      - backend:
          serviceName: mvccoredocker
          servicePort: 80
        path: / 
        pathType: Prefix
